--- a/css/index.css
+++ b/css/index.css
@@ -1,35 +1,32 @@
+html,
 body {
-    margin: 0;
-    padding: 0;
+    height: 100%;
+}
+
+body {
     font-family: 'Open Sans', sans-serif;
+}
+
+body.overflow-hidden {
+    overflow: hidden;
+}
+
+a {
+    text-decoration: none;
+    color: white;
 }
 
 header {
     background-image: url(../assets/gimbals.png);
-    height: 100vh;
     background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    height: 100vh;
     color: aliceblue;
 }
 
-.header-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    position: absolute;
-    height: 100vh;
-    width: 100vw;
-    left: 30%
-}
-
-.intro-text {
-    font-family: 'Open Sans', sans-serif;
-    padding: 10px;
-    font-size: 50px;
-}
-
-a {
+div a {
     background-color: dimgrey;
     border-bottom: 3px solid dimgrey;
     display: block;
@@ -41,26 +38,20 @@ a {
     border-radius: 4px;
 }
 
-.expanding {
-    transition: width 0.3s ease-in-out;
-    -webkit-transition: width 0.3s ease-in-out;
-    -moz-transition: width 0.3s ease-in-out;
-    -o-transition: width 0.3s ease-in-out;
-    width: 120px;
-    height: 120px;
-    background-color: #363636;
-    position: relative;
-    display: inline-block;
+.container {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background: white;
+    color: rgb(20, 20, 20);
 }
 
-.expanding:hover {
-    width: 300px;
-    height: 120px;
-    background-color: #363636;
+.inner {
+    width: 80%;
+    margin: 0 auto;
+    padding-top: 45px;
+    padding-bottom: 45px;
+    line-height: 130%;
+    font-family: 'Open Sans', sans-serif;
 }
-
-.spacing {
-    height: 10px;
-}
-
-@media (max-width:768px) {}
