--- a/css/index.css
+++ b/css/index.css
@@ -16,6 +16,18 @@ a {
     color: white;
 }
 
+.header-content {
+    position: absolute;
+    top: 50%;
+    left: 75%;
+    transform: translateX(-50%) translateY(-75%);
+    -ms-transform: translateX(-50%) translateY(-75%);
+    -webkit-transform: translateX(-50%) translateY(-75%);
+    -moz-transform: translateX(-50%) translateY(-75%);
+    -o-transform: translateX(-50%) translateY(-75%);
+    text-align: center;
+}
+
 header {
     background-image: url(../assets/gimbals.png);
     background-size: cover;
@@ -54,4 +66,48 @@ div a {
     padding-bottom: 45px;
     line-height: 130%;
     font-family: 'Open Sans', sans-serif;
+}
+
+.contentDiv {
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-100%) translateY(-50%);
+    -ms-transform: translateX(-100%) translateY(-50%);
+    -webkit-transform: translateX(-100%) translateY(-50%);
+    -moz-transform: translateX(-100%) translateY(-50%);
+    -o-transform: translateX(-100%) translateY(-50%);
+}
+
+@keyframes bouncing {
+    0% {
+        bottom: 0;
+    }
+    50% {
+        bottom: 20px;
+    }
+    100% {
+        bottom: 0;
+    }
+}
+
+.arrow {
+    -webkit-filter: invert(1);
+    filter: invert(1);
+    animation: bouncing 1s infinite ease-in-out;
+    bottom: 0;
+    display: block;
+    height: 50px;
+    margin-left: -25px;
+    position: absolute;
+    width: 50px;
+}
+
+.inner h1 {
+    font-size: 25px;
+    line-height: 1.5em;
+}
+
+.inner p {
+    line-height: 1.5em;
 }
